// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingTop": 10,
    }
  }
>
  <Text.Secondary>
    Food : 
  </Text.Secondary>
  <Text.Secondary
    lightGray={true}
  >
    60 kg - 
  </Text.Secondary>
  <Text.Secondary
    lightGray={true}
  >
    60 %
  </Text.Secondary>
</View>
`;

exports[`LegendItem should not render % if percentage is 0 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingTop": 10,
    }
  }
>
  <Text.Secondary>
    Food : 
  </Text.Secondary>
  <Text.Secondary
    lightGray={true}
  >
    0.01 kg
  </Text.Secondary>
</View>
`;
